// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WordSyncedLyricsLine > (Snapshot) renders a line halfway through its second word 1`] = `
<div>
  <button
    class="hover:text-foreground block w-full cursor-pointer py-1 text-left transition-colors duration-100 text-foreground"
    type="button"
  >
    <span
      class="block"
    >
      <span
        class="to-primary bg-linear-to-b from-transparent from-60% to-60% bg-no-repeat transition-all ease-linear duration-100"
        style="background-size: 100%;"
      >
        Lorem 
      </span>
      <span
        class="to-primary bg-linear-to-b from-transparent from-60% to-60% bg-no-repeat transition-all ease-linear duration-100"
        style="background-size: 50%;"
      >
        ipsum 
      </span>
      <span
        class="to-primary bg-linear-to-b from-transparent from-60% to-60% bg-no-repeat transition-all ease-linear duration-100"
        style="background-size: 0%;"
      >
        dolor
      </span>
    </span>
  </button>
</div>
`;

exports[`WordSyncedLyricsLine > (Snapshot) renders a line that has already played 1`] = `
<div>
  <button
    class="hover:text-foreground block w-full cursor-pointer py-1 text-left transition-colors duration-100 text-foreground/40"
    type="button"
  >
    <span
      class="block"
    >
      Lorem 
      ipsum 
      dolor
    </span>
  </button>
</div>
`;

exports[`WordSyncedLyricsLine > (Snapshot) renders a line that has not played yet 1`] = `
<div>
  <button
    class="text-foreground/60 hover:text-foreground block w-full cursor-pointer py-1 text-left transition-colors duration-100"
    type="button"
  >
    <span
      class="block"
    >
      Lorem 
      ipsum 
      dolor
    </span>
  </button>
</div>
`;

exports[`WordSyncedLyricsLine > (Snapshot) renders ruby, background vocals, and annotations 1`] = `
<div>
  <button
    class="hover:text-foreground block w-full cursor-pointer py-1 text-left transition-colors duration-100 text-foreground"
    type="button"
  >
    <span
      class="block"
    >
      <span
        class="to-primary bg-linear-to-b from-transparent from-60% to-60% bg-no-repeat transition-all ease-linear duration-100"
        style="background-size: 100%;"
      >
        <ruby>
          夜
          <rt
            class="font-sans font-normal"
          >
            よる
          </rt>
        </ruby>
      </span>
      <span
        class="to-primary bg-linear-to-b from-transparent from-60% to-60% bg-no-repeat transition-all ease-linear duration-100"
        style="background-size: 50%;"
      >
        に
      </span>
      <span
        class="to-primary bg-linear-to-b from-transparent from-60% to-60% bg-no-repeat transition-all ease-linear duration-100"
        style="background-size: 0%;"
      >
        <ruby>
          駆
          <rt
            class="font-sans font-normal"
          >
            か
          </rt>
        </ruby>
      </span>
      <span
        class="to-primary bg-linear-to-b from-transparent from-60% to-60% bg-no-repeat transition-all ease-linear duration-100"
        style="background-size: 0%;"
      >
        ける
      </span>
      <span
        class="font-semibold italic opacity-60"
      >
         (
        Lorem ipsum
        )
      </span>
    </span>
    <span
      class="block font-sans text-base font-normal tracking-normal opacity-60"
      lang="ja-Latn"
    >
      Yoru ni kakeru
    </span>
    <span
      class="block font-sans text-base font-normal tracking-normal opacity-60"
      lang="en"
    >
      Racing into the night
    </span>
  </button>
</div>
`;
